--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "local": "./node_modules/.bin/nodemon --ignore public/",
+    "local": "./node_modules/.bin/nodemon --ignore public/"
   },
-  "author": "Lighthouse Labs",
+  "author": "kevvor",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "mongodb": "^2.2.31",
+    "monk": "^6.0.3",
     "morgan": "^1.7.0",
-    "node-sass-middleware": "^0.9.8",
+    "node-sass-middleware": "^0.9.8"
   },
   "devDependencies": {
     "nodemon": "^1.9.2",
