--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "node-sass-middleware": "^0.9.8"
   },
   "devDependencies": {
-    "nodemon": "^1.9.2",
-    "sqlite3": "^3.1.4"
+    "nodemon": "^1.9.2"
   }
 }
