--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "node-sass-middleware": "^0.9.8"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.4.0",
     "nodemon": "^1.9.2"
   }
 }
